--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,13 +6,9 @@
 set $mod Mod1
 set $TERMINAL gnome-terminal
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-#font pango:System San Francisco Display 12, Font Awesome 12
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 12, Font Awesome 12
+#font pango:DejaVu Sans Mono 12, Font Awesome 12
+font pango:DejaVuSansMono Nerd Font Book 12
+#font pango:HeavyData Nerd Font 12
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -30,7 +26,7 @@ bindsym $mod+Return exec gnome-terminal --hide-menubar
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# change focus
+# change focu
 bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
