--- a/.i3status.conf
+++ b/.i3status.conf
@@ -7,58 +7,64 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        interval = 5
+  colors = true
+  interval = 5
 }
 
 order += "keyboard_layout"
 order += "volume_status"
+order += "light"
 order += "battery_level"
 order += "sysdata"
 order += "diskdata"
 order += "time"
 
-volume_status {
-    button_up = 4
-    button_down = 5
-    button_mute = 2
-
-    thresholds = [
-        (0, "#FF0000"),
-        (10, "#E2571E"),
-        (20, "#FF7F00"),
-        (30, "#FFFF00"),
-        (40, "#00FF00"),
-        (50, "#96BF33"),
-        (60, "#0000FF"),
-        (70, "#4B0082"),
-        (80, "#8B00FF"),
-        (90, "#FFFFFF"),
-        (110, "#FF7F00"),
-        (120, "#E2571E"),
-        (130, "#FF0000")
-    ]
+keyboard_layout { 
+  format = " {layout}"
 }
-wireless _first_ {
-	colors = false
-        format_up = "%quality %essid %ip"
-        format_down = "W: down"
+
+volume_status {
+  button_up = 4
+  button_down = 5
+  button_mute = 2
+
+  thresholds = [
+    (0, "#FF0000"),
+    (10, "#E2571E"),
+    (20, "#FF7F00"),
+    (30, "#FFFF00"),
+    (40, "#00FF00"),
+    (50, "#96BF33"),
+    (60, "#0000FF"),
+    (70, "#4B0082"),
+    (80, "#8B00FF"),
+    (90, "#FFFFFF"),
+    (110, "#FF7F00"),
+    (120, "#E2571E"),
+    (130, "#FF0000")
+  ]
+  format = " {percentage}%"
+  format_muted = " no musek"
+}
+
+light {
+  format = " {percentage}%"
 }
 
 battery_level {
-        blocks = ""
+  blocks = ""
 }
 
 time {
-        format = " %m-%d| %H:%M"
+  format = " %m-%d  %H:%M"
 }
 
 sysdata {
-        format = " {cpu_temp}{temp_unit}  {cpu_usage}%  {mem_used_percent}%"
+  format = " {cpu_temp}{temp_unit}  {cpu_usage}%  {mem_used_percent}%"
 }
 
 diskdata {
-        disk = "/dev/sda3"
-        format = " {used_percent}%"
+  disk = "/dev/sda3"
+  format = "{used_percent}%"
 }
 
