Changes from lksh

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,37 +1,86 @@
-# Should you change your keyboard layout some time, delete
-# this file and re-run i3-config-wizard(1).
-#
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-
-set $mod Mod1
+### BASE CONFIG ###
+# constants
 set $TERMINAL gnome-terminal
+set $mod Mod1
 
-#font pango:DejaVu Sans Mono 12, Font Awesome 12
 font pango:DejaVuSansMono Nerd Font 12
-#font pango:HeavyData Nerd Font 12
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
-
-# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-#bindsym Up exec echo 'Up key pressed' > /dev/null
 
-# start a terminal
+# workspace apps
+assign [class="Firefox"] $workspace1
+assign [class="QtCreator"] $workspace4
+assign [class="jetbrains-pycharm-ce"] $workspace4
+assign [class="ktorrent"] $workspace7
+assign [class="Transmission-gtk"] $workspace7
+assign [class="TelegramDesktop"] $workspace8
+assign [class="smplayer"] $workspace9
+assign [class="Clementine"] $workspace10
+
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+
+hide_edge_borders both
+
+# bar settings
+bar {
+  status_command "py3status --include /home/sencho/.config/i3/py3status/"
+  strip_workspace_numbers yes
+  binding_mode_indicator yes
+  separator_symbol "  "
+  #separator_symbol "  "
+  #separator_symbol " "
+	colors {
+		background $bg-color
+	  separator #a8a8a8
+		#                  border             background         text
+		focused_workspace  $bg-color          $bg-color          $text-color
+		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+	}
+}
+
+# startup
+exec --no-startup-id nm-applet
+exec --no-startup-id fluxgui
+# wallpaper
+exec_always feh --bg-scale /home/sencho/Pictures/TwinPeaks/wall1.png
+exec compton -f
+# keyboard settings
+exec sencho-xkb
+# mouse settings
+exec xinput --set-prop 14 288 0.8
+
+# switch to previous workspace with mod+current workspace
+workspace_auto_back_and_forth yes
+
+### KEYBINDINGS CONFIG ###
+# Glitching keys
+bindsym Up nop
+bindsym F1 nop
+bindcode 112 nop
+
 bindsym $mod+Return exec gnome-terminal --hide-menubar
+#bindsym $mod+Return exec $TERMINAL
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -40,10 +89,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+colon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -52,7 +101,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+o split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -77,75 +126,21 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-# workspaces variables
-# firefox
-set $workspace1 "1:"
-# terminals
-set $workspace2 "2:"
-# editor
-set $workspace3 "3:"
-# ide
-set $workspace4 "4:"
-# other
-set $workspace5 "5"
-set $workspace6 "6"
-# torrents
-set $workspace7 "7:"
-# communication
-set $workspace8 "8:"
-# Video
-set $workspace9 "9:"
-# music
-set $workspace10 "10:"
-
-# switch to workspace
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace $workspace9
-bindsym $mod+0 workspace $workspace10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace $workspace9
-bindsym $mod+Shift+0 move container to workspace $workspace10
-
-# workspace apps
-assign [class="Firefox"] $workspace1
-assign [class="QtCreator"] $workspace4
-assign [class="jetbrains-pycharm-ce"] $workspace4
-assign [class="ktorrent"] $workspace7
-assign [class="Transmission-gtk"] $workspace7
-assign [class="TelegramDesktop"] $workspace8
-assign [class="smplayer"] $workspace9
-assign [class="Clementine"] $workspace10
-
-
+# assemble config files into 1, then restart i3wm
+bindsym $mod+Shift+a exec i3-assemble; restart 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod+Shift+c reload  
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $mod+Shift+r restart  
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
@@ -157,75 +152,61 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+mode "app launch" {
+        bindsym f exec firefox
+        bindsym r exec transmission-gtk
+        bindsym j exec jetbrains-toolbox
+        bindsym m exec Telegram
 
-set $bg-color 	         #2f343f
-set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
+        bindsym a exec firefox; exec Telegram; exec jetbrains-toolbox
 
-# window colors
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
-
-hide_edge_borders both
-
-# bar settings
-bar {
-  status_command "py3status --include /home/sencho/.config/i3/py3status/"
-  separator_symbol "  "
-  #separator_symbol "  "
-  #separator_symbol " "
-	colors {
-		background $bg-color
-	  separator #a8a8a8
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
 }
-
-# bumblebee
-#bar {
-#  #font pango:UbuntuMono Nerd Font Regular 13
-#  colors {
-#		background $bg-color
-#	  separator 
-#		#                  border             background         text
-#		focused_workspace  $bg-color          $bg-color          $text-color
-#		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-#		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-#	}
-#	position bottom
-#	#tray_output none
-#	status_command bumblebee-status -m disk:root cpu memory battery date time -p interval=5 -t solarized-powerline
-#}
+bindsym $mod+m mode "app launch"
 
 # key-bindings
-bindsym $mod+shift+x exec i3lock --color "$bg-color"
+bindsym $mod+Shift+x exec i3lock --color "$bg-color"
 bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 1 # decrease screen brightness
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 bindsym $mod+d exec rofi -show run
+bindsym $mod+c exec cmus-remote -u
+bindsym $mod+i exec gnome-terminal --hide-menubar -e ranger; floating toggle
 
-bindsym $mod+Shift+f exec firefox
+### WORKSPACES CONFIG ###
+set $workspace1 "1:I: "
+set $workspace2 "2:II: "
+set $workspace3 "3:III: "
+set $workspace4 "4:IV: "
+set $workspace5 "5:V: "
+set $workspace6 "6:VI: "
+set $workspace7 "7:VII: "
+set $workspace8 "8:VIII: "
+set $workspace9 "9:IX: "
+set $workspace10 "10:X: "
 
+bindsym $mod+1 workspace $workspace1
+bindsym $mod+2 workspace $workspace2
+bindsym $mod+3 workspace $workspace3
+bindsym $mod+4 workspace $workspace4
+bindsym $mod+5 workspace $workspace5
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
+bindsym $mod+0 workspace $workspace10
 
-# startup
-exec --no-startup-id firefox
-exec --no-startup-id nm-applet
-exec --no-startup-id fluxgui
-# wallpaper
-exec_always feh --bg-scale /home/sencho/Pictures/TwinPeaks/wall1.png
-exec compton -f
-# keyboard settings
-exec sencho-xkb
-# mouse settings
-exec xinput --set-prop 14 288 0.8
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
+bindsym $mod+Shift+0 move container to workspace $workspace10
 
