--- a/.i3status.conf
+++ b/.i3status.conf
@@ -13,7 +13,7 @@ general {
 
 order += "keyboard_layout"
 order += "volume_status"
-order += "light"
+#order += "light"
 order += "battery_level"
 order += "sysdata"
 order += "diskdata"
@@ -59,12 +59,17 @@ time {
   format = " %m-%d  %H:%M"
 }
 
+clock {
+  format = "{GMT}"
+  format_time = "{icon}  %m-%d  %H:%M"
+}
+
 sysdata {
   format = " {cpu_temp}{temp_unit}  {cpu_usage}%  {mem_used_percent}%"
 }
 
 diskdata {
-  disk = "/dev/sda3"
+  disk = "/dev/sda2"
   format = "{used_percent}%"
 }
 
