Add big changes

--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -26,8 +26,8 @@ set $urgent-bg-color     #E53935
 # window colors
 #                       border              background         text                 indicator
 client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
 
 hide_edge_borders both
@@ -52,15 +52,17 @@ bar {
 
 # startup
 exec --no-startup-id nm-applet
-exec --no-startup-id fluxgui
+#exec --no-startup-id fluxgui
 # wallpaper
-exec_always feh --bg-scale /home/sencho/Pictures/TwinPeaks/wall1.png
+exec_always feh --bg-scale ~/Images/TwinPeaks/wall2.png
 exec compton -f
 # keyboard settings
 exec sencho-xkb
 # mouse settings
-exec xinput --set-prop 14 288 0.8
+#exec xinput --set-prop 14 288 0.8
 
 # switch to previous workspace with mod+current workspace
 workspace_auto_back_and_forth yes
+
+# vim:filetype=i3
 
