--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -1,8 +1,7 @@
 ### KEYBINDINGS CONFIG ###
 bindsym F1 nop
 
-#bindsym $mod+Return exec $TER
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec $TERMINAL
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -90,6 +89,7 @@ mode "app launch" {
         bindsym m exec Telegram
 
         bindsym a exec firefox; exec Telegram; exec jetbrains-toolbox
+        bindsym t exec $terminal; exec $terminal
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -97,7 +97,7 @@ mode "app launch" {
 bindsym $mod+m mode "app launch"
 
 # key-bindings
-bindsym $mod+Shift+x exec i3lock --color "$bg-color"
+bindsym $mod+Shift+x exec i3lock-wrapper
 bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 1 # decrease screen brightness
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -106,4 +106,6 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute s
 bindsym $mod+d exec rofi -show run
 bindsym $mod+c exec cmus-remote -u
 bindsym $mod+i exec gnome-terminal --hide-menubar -e ranger; floating toggle
+
+# vim:filetype=i3
 
