--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -88,7 +88,7 @@ mode "app launch" {
         bindsym j exec jetbrains-toolbox
         bindsym m exec Telegram
 
-        bindsym a exec firefox; exec Telegram; exec jetbrains-toolbox
+        bindsym a exec firefox; exec telegram-desktop; exec jetbrains-toolbox
         bindsym t exec $terminal; exec $terminal
 
         bindsym Return mode "default"
