--- a/.config/i3/workspaces.conf
+++ b/.config/i3/workspaces.conf
@@ -1,14 +1,14 @@
 ### WORKSPACES CONFIG ###
-set $workspace1 "1:I: "
-set $workspace2 "2:II: "
-set $workspace3 "3:III: "
-set $workspace4 "4:IV: "
-set $workspace5 "5:V: "
-set $workspace6 "6:VI: "
-set $workspace7 "7:VII: "
-set $workspace8 "8:VIII: "
-set $workspace9 "9:IX: "
-set $workspace10 "10:X: "
+set $workspace1 "1:"
+set $workspace2 "2:"
+set $workspace3 "3:"
+set $workspace4 "4:"
+set $workspace5 "5:"
+set $workspace6 "6:"
+set $workspace7 "7:"
+set $workspace8 "8:"
+set $workspace9 "9:"
+set $workspace10 "10:"
 
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
