--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -30,6 +30,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+# split orientation
 bindsym $mod+o split h;exec notify-send 'tile horizontally'
 bindsym $mod+v split v;exec notify-send 'tile vertically'
 
