--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -35,7 +35,8 @@ hide_edge_borders both
 # bar settings
 bar {
   status_command "py3status --include /home/sencho/.config/i3/py3status/"
-  strip_workspace_numbers yes
+  # If u dont like workspace numbers
+  #strip_workspace_numbers yes
   binding_mode_indicator yes
   separator_symbol "  "
   #separator_symbol "  "
