--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -55,10 +55,12 @@ bar {
 exec --no-startup-id nm-applet
 #exec --no-startup-id fluxgui
 # wallpaper
-exec_always feh --bg-scale ~/Images/TwinPeaks/wall2.png
-exec compton -f
+#exec_always --no-startup-id --bg-scale ~/Images/TwinPeaks/wall2.png
+exec --no-startup-id my_cron
+# enable transparency and other features
+exec --no-startup-id compton -f
 # keyboard settings
-exec sencho-xkb
+exec --no-startup-id sencho-xkb
 # mouse settings
 #exec xinput --set-prop 14 288 0.8
 
