--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -96,11 +96,18 @@ bindsym $mod+m mode "app launch"
 
 # key-bindings
 bindsym $mod+Shift+x exec i3lock-wrapper
+
 bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 1 # decrease screen brightness
+
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+bindsym Print exec --no-startup-id i3-scrot
+bindsym $mod+Print --release exec --no-startup-id i3-scrot -w
+bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
+
 bindsym $mod+d exec rofi -show run
 bindsym $mod+c exec cmus-remote -u
 bindsym $mod+i exec gnome-terminal --hide-menubar -e ranger; floating toggle
