Add tor browser i3wm support

--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -9,6 +9,8 @@ floating_modifier $mod
 
 # workspace apps
 assign [class="Firefox"] $workspace1
+assign [class="qutebrowser"] $workspace1
+assign [class="Tor Browser"] $workspace1
 assign [class="QtCreator"] $workspace4
 assign [class="jetbrains-pycharm-ce"] $workspace4
 assign [class="ktorrent"] $workspace7
