--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -34,25 +34,6 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 hide_edge_borders both
 
-# bar settings
-bar {
-  status_command "py3status --include /home/sencho/.config/i3/py3status/"
-  # If u dont like workspace numbers
-  #strip_workspace_numbers yes
-  binding_mode_indicator yes
-  separator_symbol "  "
-  #separator_symbol "  "
-  #separator_symbol " "
-	colors {
-		background $bg-color
-	  separator #a8a8a8
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
-
 # startup
 exec --no-startup-id nm-applet
 #exec --no-startup-id fluxgui
@@ -65,9 +46,10 @@ exec --no-startup-id compton -f
 exec --no-startup-id sencho-xkb
 # mouse settings
 #exec xinput --set-prop 14 288 0.8
+# polybar
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # switch to previous workspace with mod+current workspace
 workspace_auto_back_and_forth yes
 
 # vim:filetype=i3
-
