--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -55,7 +55,7 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # assemble config files into 1, then restart i3wm
-bindsym $mod+Shift+a exec i3-assemble; restart 
+bindsym $mod+Shift+a exec i3-assemble
 # reload the configuration file
 bindsym $mod+Shift+c reload  
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
