Add a note about my terminals

--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -1,6 +1,7 @@
 ### BASE CONFIG ###
 # constants
-set $TERMINAL termite
+#set $TERMINAL termite
+set $TERMINAL "kitty --session ~/.config/kitty/zsh.session"
 set $mod Mod1
 
 font pango:DejaVuSansMono Nerd Font 12
@@ -16,6 +17,7 @@ assign [class="jetbrains-pycharm-ce"] $workspace4
 assign [class="ktorrent"] $workspace7
 assign [class="Transmission-gtk"] $workspace7
 assign [class="TelegramDesktop"] $workspace8
+assign [class="Riot"] $workspace8
 assign [class="smplayer"] $workspace9
 assign [class="Clementine"] $workspace10
 
