Move back from kitty to termite terminal

--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -1,7 +1,7 @@
 ### BASE CONFIG ###
 # constants
-#set $TERMINAL termite
-set $TERMINAL "kitty --session ~/.config/kitty/zsh.session"
+set $TERMINAL termite
+#set $TERMINAL "kitty --session ~/.config/kitty/zsh.session"
 set $mod Mod1
 
 font pango:DejaVuSansMono Nerd Font 12
