--- a/.mozilla/firefox/profiles.ini
+++ b/.mozilla/firefox/profiles.ini
@@ -1,9 +1,13 @@
-[General]
-StartWithLastProfile=1
+[Install4F96D1932A9F858E]
+Default=sencho.default
 
 [Profile0]
 Name=default
 IsRelative=1
 Path=sencho.default
 Default=1
+
+[General]
+StartWithLastProfile=1
+Version=2
 
