Remove i3lock-wrapper

--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -95,7 +95,7 @@ mode "app launch" {
 bindsym $mod+m mode "app launch"
 
 # key-bindings
-bindsym $mod+Shift+x exec i3lock-wrapper
+bindsym $mod+Shift+x exec i3lock
 
 bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 1 # decrease screen brightness
