--- a/.config/i3/base.conf
+++ b/.config/i3/base.conf
@@ -45,7 +45,7 @@ exec --no-startup-id nm-applet
 #exec_always --no-startup-id --bg-scale ~/Images/TwinPeaks/wall2.png
 exec --no-startup-id my_cron
 # enable transparency and other features
-exec --no-startup-id picom -f
+exec --no-startup-id picom -f -b --unredir-if-possible --backend xr_glx_hybrid --vsync --use-damage --glx-no-stencil
 # keyboard settings
 exec --no-startup-id sencho-xkb
 # mouse settings
