Add a little bit of transparency

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -217,6 +217,8 @@ wintypes:
     };
 };
 
+opacity-rule = [ "90:class_g = 'i3bar'", "80:class_g = 'i3-frame' && !_NET_WM_STATE@:32a"];
+
 ######################
 #
 # XSync
