--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -97,6 +97,8 @@ bindsym $mod+m mode "app launch"
 # key-bindings
 bindsym $mod+Shift+x exec i3lock
 
+bindsym $mod+p exec temp-disable-alt
+
 bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 1 # decrease screen brightness
 
